devops-projects/advance/25-Secured-Supply-Chain/kyverno/disallow-latest.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest
spec:
  validationFailureAction: Enforce
  rules:
  - name: no-latest
    match:
      any:
      - resources: {kinds: ["Pod"]}
    validate:
      message: "Using :latest is not allowed"
      pattern:
        spec:
          containers:
          - image: "!*:latest"
